--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!-- Write your HTML in this file -->
 <DOCTYPE html>
-  
+<html>
+<head><title>A title.</title></head>
+<body></body>
+</html>
 </DOCTYPE>
